<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.tsolution.base.listener.AdapterListener" />

        <variable
            name="viewModel"
            type="com.kna.appsec.viewmodel.GrammarFrgVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:theme="@style/ToolbarColoredBackBlack"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/icon_back"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/tv_base_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16sp"
            android:paddingTop="12dp"
            android:paddingEnd="16sp"
            android:paddingBottom="12dp"
            android:text="@string/base_english"
            android:textColor="#212121"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_orange"
            app:drawableStartCompat="@drawable/ic_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:listener="@{listener}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_base_eng" />

        <TextView
            android:id="@+id/tv_clauses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16sp"
            android:paddingTop="12dp"
            android:paddingEnd="16sp"
            android:paddingBottom="12dp"
            android:text="@string/Clauses"
            android:textColor="#212121"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_orange"
            app:drawableStartCompat="@drawable/ic_star_gold"
            app:layout_constraintTop_toBottomOf="@id/tv_base_eng"
            app:listener="@{listener}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_clauses" />

        <TextView
            android:id="@+id/tv_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16sp"
            android:paddingTop="12dp"
            android:paddingEnd="16sp"
            android:paddingBottom="12dp"
            android:text="@string/accent"
            android:textColor="#212121"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_orange"
            app:drawableStartCompat="@drawable/ic_wallet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_clauses"
            app:listener="@{listener}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_sound" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>